[gd_scene load_steps=8 format=3 uid="uid://b8g8dmlr8xrvm"]

[ext_resource type="Script" uid="uid://i2jwag5xq5nn" path="res://scripts/level/level.gd" id="1_nns1f"]
[ext_resource type="Script" uid="uid://cmdxvgxihnq8g" path="res://scripts/resources/LevelPropsResource.gd" id="2_df6hm"]
[ext_resource type="Script" uid="uid://bw7puwhchjbxu" path="res://scripts/level/level_executor.gd" id="4_3k21g"]
[ext_resource type="PackedScene" uid="uid://ddvb4iup6m8ow" path="res://scenes/ui/toolbox/toolbox.tscn" id="4_ujwm2"]
[ext_resource type="PackedScene" uid="uid://fuef6ulivwf1" path="res://scenes/ui/level_info/level_info.tscn" id="5_ry6pb"]

[sub_resource type="Resource" id="Resource_306te"]
script = ExtResource("2_df6hm")
level_name = "Nivelzao"
level_description = "mande o numero para o container de validação"
inputs = Array[PackedInt32Array]([PackedInt32Array(6), PackedInt32Array(4)])
outputs = Array[PackedInt32Array]([PackedInt32Array(4)])
metadata/_custom_type_script = "uid://cmdxvgxihnq8g"

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_kqmoh"]
size = Vector2(32, 32)

[node name="level" type="Node2D"]
process_mode = 1
script = ExtResource("1_nns1f")
level_props = SubResource("Resource_306te")

[node name="LevelExecutor" type="Node" parent="."]
script = ExtResource("4_3k21g")
metadata/_custom_type_script = "uid://bw7puwhchjbxu"

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="LevelUILayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="MarginContainer" type="MarginContainer" parent="LevelUILayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Toolbox" parent="LevelUILayer/MarginContainer" instance=ExtResource("4_ujwm2")]
layout_mode = 2

[node name="Top" type="HBoxContainer" parent="LevelUILayer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 20
alignment = 1

[node name="RunButton" type="Button" parent="LevelUILayer/MarginContainer/Top"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "run"
icon = SubResource("PlaceholderTexture2D_kqmoh")
icon_alignment = 1

[node name="ResetButton" type="Button" parent="LevelUILayer/MarginContainer/Top"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "reset"

[node name="LevelInfo" parent="LevelUILayer/MarginContainer" instance=ExtResource("5_ry6pb")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="LevelUILayer/MarginContainer/Top/RunButton" to="LevelExecutor" method="start_execution"]
[connection signal="pressed" from="LevelUILayer/MarginContainer/Top/ResetButton" to="LevelExecutor" method="reset_level"]
